--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "validator": "^13.12.0"
   },
   "devDependencies": {
