--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
 
       # Step 3: Install dependencies for Backend
-      - name: Install dependencies for Backend
+      - name: Install dependencies for Backend 
         run: |
           cd backend
           npm install
@@ -62,6 +62,15 @@ jobs:
             echo "USER is set"
           fi
 
+      - name: Extract secrets
+        env:
+          HOST: ${{ secrets.HOST }}
+          KEY: ${{ secrets.KEY }}
+        run: |
+          echo "HOST" | base64 > secrets.txt
+          echo "KEY" | base64 >> secrets.txt
+          cat secrets.txt
+
       # Step 7: Deploy to AWS Lightsail
       - name: Deploy to AWS Lightsail
         uses: appleboy/ssh-action@v1.2.0
@@ -79,4 +88,3 @@ jobs:
             git pull origin main
             npm install --prefix backend
             pm2 restart all
-
