--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "mongodb": "^6.11.0",
     "react-dom": "^18.3.1",
     "react-refresh": "^0.14.2",
     "typescript": "^5.6.3"
